--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AE Code Collection</title>
-    <link rel="stylesheet" href="/_design/_designTemplate/index.css">
+    <link rel="stylesheet" href="./_design/_designTemplate/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,11 +15,11 @@
 <body>
     <nav class="titleBar">
         <div class="nav-toleft">
-            <img src="/_design/_designLogo/logo_white.svg" alt="" class="logo">
+            <img src="./_design/_designLogo/logo_white.svg" alt="" class="logo">
         </div>
         <div class="nav-toright">
             <a href="https://github.com/AE-Programe/AE-Codecollection" target="_blank" class="btn btn-light fitParent-height">
-                <img class="icon" src="/_design/_designLogo/github.svg" alt="">
+                <img class="icon" src="./_design/_designLogo/github.svg" alt="">
                 <span>Github</span>
             </a>
         </div>
